kubernetes/04-network-policies/allow-web-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-egress
  namespace: inventario
spec:
  podSelector:
    matchLabels:
      app: inventario-web
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector: { matchLabels: { app: ubicacion-db } }
      ports:
        - { port: 1433, protocol: TCP }
    - to:
        - podSelector: { matchLabels: { app: inventario-db } }
      ports:
        - { port: 27017, protocol: TCP }
    - to:
        - podSelector: { matchLabels: { app: ldap-service } }
      ports:
        - { port: 389, protocol: TCP }
        - { port: 636, protocol: TCP }
    - ports:
        - { port: 53, protocol: UDP }
        - { port: 53, protocol: TCP }
