kubernetes/04-network-policies/allow-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-web
  namespace: inventario
spec:
  podSelector:
    matchLabels:
      app: inventario-web
  policyTypes: [Ingress]
  ingress:
    - ports:
        - { port: 3000, protocol: TCP }
