kubernetes/04-network-policies/allow-web-to-ldap.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-ldap
  namespace: inventario
spec:
  podSelector:
    matchLabels:
      app: ldap-service
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: inventario-web } }
      ports:
        - { port: 389, protocol: TCP }
        - { port: 636, protocol: TCP }
