kubernetes/04-network-policies/allow-web-to-ubicacion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-ubicacion
  namespace: inventario
spec:
  podSelector:
    matchLabels:
      app: ubicacion-db
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: inventario-web } }
      ports:
        - { port: 1433, protocol: TCP }
